added Hardware Simulator, other minor changes

--- a/projects/04/04.md
+++ b/projects/04/04.md
@@ -1,7 +1,15 @@
 # Machine Language
 
+<!--toc:start-->
 - [Machine Language](#machine-language)
+  - [Introduction](#introduction)
+  - [Hardware Elements](#hardware-elements)
+  - [Instructions](#instructions)
   - [Language Specification](#language-specification)
+    - [Background](#background)
+      - [Memory](#memory)
+      - [Registers](#registers)
+      - [Addressing](#addressing)
     - [A-Instruction](#a-instruction)
     - [C-Instruction](#c-instruction)
   - [Input/Output](#inputoutput)
@@ -11,10 +19,43 @@
     - [Registers and Memory](#registers-and-memory)
     - [Branching](#branching)
     - [Variables](#variables)
+    - [Symbols](#symbols)
     - [Iteration](#iteration)
     - [Pointers](#pointers)
     - [Output](#output)
     - [Input](#input)
+<!--toc:end-->
+
+## Introduction
+
+- to understand a system or build one, study the function of the system.
+  - i.e. study the machine language the platform is designed to realize.
+- **machine language** is an agreed upon formalism designed to code machine instructions.
+  - instruct the computer's processor to perform arithmetic and logical operations, read and write values from and to the computer's memory, etc.
+
+
+## Hardware Elements
+
+- **Memory**: continuous sequence of cells, memory registers each having unique addresses.
+- **Processor**: perform a fixed set of primitive operations.
+  - ALU operations, memory access and control operations.
+  - draws inputs from the selected registers and memory locations and writes the outputs to selected registers and memory locations.
+- **Registers**: to move data from processor and memory.
+  - high speed memory location
+  - *data registers*: hold data values
+  - *address registers*: hold values that can be interpreted as data values or memory addresses.
+
+## Instructions
+
+- Arithmetic and logical operations are represented by symbolic instruction to execute on a computer.
+  - must be translated to binary code 
+  - done by **assembler**
+- Every machine language has means for accessing and then manipulating, selected memory locations using *address register*.
+- Several variants of conditional and unconditional goto instructions as well as label declaration statements that mark the goto destinations is present in machine language.
+- Every symbols must be translated to binary code before they can be executed.
+- Unlike code that uses physical addresses, the translated binary version of the code that uses symbolic references can be loaded into, and executed from, any memory segment
+that happens to be available in the computer's memory.
+  - low-level code that mentions no physical addresses is said to be relocatable.
 
 ## Language Specification
 
@@ -31,10 +72,46 @@
 
 - Binary
 
-    ```bin
-    0000000000010001
-    1110011111000110
-    ```
+  ```bin
+  0000000000010001
+  1110011111000110
+  ```
+
+![Instruction Set](instruction_set.png)
+
+### Background
+
+#### Memory
+
+- two distinct memory
+  - **data memory**
+    - stores binary values the programs manipulate
+    - read/write device
+  - instruction memory
+    - stores program's instructions represented by binary values.
+    - read only device
+- both memories are 16-bit wide and each has a 15-bit address space.
+- Thus, the maximum addressable size of each memory unit is $2^{15}$ or $32$K 16-bit words.
+- each memory unit is a linear sequence of addressable memory registers with address ranging from $0$ to $32K - 1$.
+
+#### Registers
+
+- instructions manipulate three 16-bit registers
+  - **data register** `D`
+    - store a 16-bit value
+  - **address register** `A`
+    - serves as both address register and data register
+  - **data memory register** `M`
+
+#### Addressing
+
+- `@xxx` sets the `A` register to the value `xxx`.
+- it has two side effects:
+  - it makes the RAM register whose address is `xxx` the selected memory register, denoted `M`
+  - it males the value of the ROM register whose address is `xxx` the selected instruction.
+- which action is to be pursued is determined by the subsequent instruction.
+- i.e `n`, both `RAM[n]` and `ROM[n]` are selected.
+
 
 ### A-Instruction
 
@@ -136,6 +213,7 @@ opcode [not used] comp      dest     jump
 
 ### Branching
 
+- unconditional and conditional branching
 - fundamental ability to tell the computer to evaluate a certain boolean condition and based on the result decide whether to jump and execute some other section of the program
   - `goto`
 
@@ -197,6 +275,13 @@ M=D  //R0=temp
 @END
 0;JMP
 ```
+
+### Symbols
+
+- built-in symbols
+  - `R0, ... R15` virtual registers
+  - `SP, LCL, ARG, THIS, THAT`
+  - `SCREEN, KBD`
 
 ### Iteration
 
