--- a/projects/05/05.md
+++ b/projects/05/05.md
@@ -1,5 +1,6 @@
 # Computer Architecture
 
+<!--toc:start-->
 - [Computer Architecture](#computer-architecture)
   - [Von Neumann Architecture](#von-neumann-architecture)
   - [The Fetch-Execute Cycle](#the-fetch-execute-cycle)
@@ -12,6 +13,8 @@
   - [Memory](#memory)
     - [Memory Implementation](#memory-implementation)
   - [Instruction Memory (ROM)](#instruction-memory-rom)
+<!--toc:end-->
+
 
 ## Von Neumann Architecture
 
